updated resume, fixed button icon spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -366,7 +366,7 @@ img {
   background-color: var(--first-color-alt);
 }
 
-.button_icon{
+.button__icon{
   font-size: 1.25rem;
   margin-left: var(--mb-0-5);
   transition: 0.3s;
